# simuls-misspecif

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  MNL_integrals.html  MNL_params.html  MNL_utils.html  Makefile  README.md  compute_stats.html  copy_from_aws.sh  create_samples.html  evaluations.html  extract_from_results.html  index.html  mkdocs.yml  mypy.ini  objects.inv  plot_simul_results.html  plots_paper.html  pyproject.toml  simuls_driver.html  sitemap.xml  zip_plots_paper.sh
.github/workflows/: main.yml  on-release-main.yml
J1/endo_v3/: extract_results_endo_J=1_v3_T=10000.pkl  extract_results_endo_J=1_v3_T=5000.pkl  simul_results_endo_J=1_v3_T=10000.pkl  simul_results_endo_J=1_v3_T=5000.pkl
J1/endo_v4/: extract_results_endo_J=1_v4_T=10000.pkl  extract_results_endo_J=1_v4_T=5000.pkl  simul_results_endo_J=1_v4_T=10000.pkl  simul_results_endo_J=1_v4_T=5000.pkl
J1/exo_v3/: extract_results_exo_J=1_v3_T=10000.pkl  extract_results_exo_J=1_v3_T=5000.pkl  simul_results_exo_J=1_v3_T=10000.pkl  (+1 more)
docs/: MNL_integrals.md  MNL_params.md  MNL_utils.md  compute_stats.md  create_samples.md  distance_covariances.md  evaluations.md  extract_from_results.md  index.md  plot_simul_results.md  plots_paper.md  simuls_driver.md
search/: search_index.json
simuls_misspecif/: 92454.out  MNL_integrals.py  MNL_params.py  MNL_utils.py  compute_stats.py  create_samples.py  evaluations.py  extract_from_results.py  plot_simuls_results.py  plots_paper.py  res.pkl  simuls_driver.py  utils.py
tests/: test_evaluations_reformat_varcov.py  test_evaluations_reformat_zstar.py
(+101 files in other folders)
